--- a/sass/base/_saction.scss
+++ b/sass/base/_saction.scss
@@ -2,3 +2,10 @@
     padding-top: 94px;
     padding-bottom: 94px;
 } 
+
+@media screen and (min-width: 768px) {
+    .section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+}
