--- a/sass/base/common/_container.scss
+++ b/sass/base/common/_container.scss
@@ -6,4 +6,17 @@
     margin-left: auto;
     margin-right: auto;
  }
+
+
+ @media screen and (min-width: 768px){
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .container {
+        width: 480px;
+    }
+}
  
