--- a/sass/base/common/_flexbox.scss
+++ b/sass/base/common/_flexbox.scss
@@ -5,3 +5,12 @@
     
 }
 
+
+@media screen and (min-width: 768px){
+    .flexbox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    }
+}
+
