--- a/sass/components/_main__banner.scss
+++ b/sass/components/_main__banner.scss
@@ -38,3 +38,19 @@
     letter-spacing: 0.06em;
 
 }
+
+
+@media screen and (min-width: 768px) {
+    .banner__title {
+    color: #FFFFFF;
+    font-size: 26px;
+    font-weight: 900;
+    line-height: 1.61;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    width: 360px;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+    }
+}
