--- a/sass/components/_main__banner.scss
+++ b/sass/components/_main__banner.scss
@@ -3,15 +3,51 @@
 /*banner*/
 
 .banner {
+    margin-left: auto;
+  margin-right: auto;
+  padding-top: 118px;
+    padding-bottom: 118px;
+  
+
+  min-height: 400px;
+  max-width: 480px;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/mobile-banner.jpg);
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/mobile-banner@2x.jpg);
+  }
+
+    @include mq(desktop) {
     padding-top: 200px;    
     padding-bottom: 200px;
     min-height: 600px;
-    /* max-width: 1600px;  !!! */
-    
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 1600px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/image20.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/banner@2x.jpg);
+    }
+    }
+
+      @include mq(tablet) {
+    padding-bottom: 118px;
+
+    max-width: 768px;
+       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/tablet-banner.jpg);
+
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/tablet-banner@2x.jpg);
+    }
+
+    }
+
+
+
     background-color: $dark-bg-color;
     background-position: center;
     background-repeat: no-repeat;
@@ -27,15 +63,22 @@
 /* banner-text */
 
 .banner__title{
-    color: #FFFFFF;
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
     margin-bottom: 30px;
-    width: 696px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
-    text-transform: uppercase;
     letter-spacing: 0.06em;
+    
+ @include textStyle($main-bg-color, 26px, calc(42 / 26), 0.06em);
+  font-weight: 900;
+  text-transform: uppercase;
+
+  @include mq(desktop) {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: calc(60 / 44);
+  }
+
 
 }
 
