--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,6 @@
 
+    $primaryGap: 30px;
+
     $main-color: #757575;
     $header-color: #212121;
     $accent-color: #2196f3;
@@ -7,9 +9,16 @@
     $medium-bg-color: #f5f4fa;
     $dark-bg-color: #2f303a;
     $team-social-color: #afb1b8;
+    $borderColor: #ececec;
+    $logo: #000;
 
     $main-font-family: "Roboto", sans-serif;
     $secondary-font-family: "Raleway", sans-serif;
 
    
+$animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+
+// @function getBgColor($key) {
+//   @return map-get($bg-modal-color, $key);
+// }
