--- a/sass/base/common/_logo.scss
+++ b/sass/base/common/_logo.scss
@@ -1,10 +1,17 @@
 .header__logo{
     font-family: $secondary-font-family;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 700;
+    line-height: calc(28/24);
     color: #000;
     letter-spacing: 00.03em;
     text-decoration: none;
+
+    @include mq(desktop){
+        font-size: 26px;
+        line-height: calc(31/26)
+    }
+
 }
 
 /*logo-footer*/
