--- a/sass/components/_clients__link.scss
+++ b/sass/components/_clients__link.scss
@@ -1,18 +1,51 @@
 
-.clients__link {
-    display: block;
-    padding: 16px 32px;
-    height: 92px;
-    width: 170px;
-    color: $team-social-color;
-    border: 1px solid $team-social-color;
-    border-radius: 4px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// .clients__link {
+//     display: block;
+//     padding: 16px 32px;
+//     height: 92px;
+//     width: 170px;
+//     color: $team-social-color;
+//     border: 1px solid $team-social-color;
+//     border-radius: 4px;
+//     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+// }
+
+.clients__link {
+  @include flexBox();
+
+  width: 100%;
+  height: 100%;
+
+  color: $team-social-color;
+  border: 1px solid $team-social-color;
+  border-radius: 4px;
+
+  transition: color $animation, border-color $animation;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    border: 1px solid $accent-color;
+  }
 }
 
-.clients__item:not(:last-child) {
-    margin-right: 30px;
+.clients__item {
+  flex-basis: calc((100% - 30px) / 2);
+  height: 92px;
+
+  @include mq(tablet) {
+    flex-basis: calc((100% - 30px * 2) / 3);
+  }
+
+  @include mq(desktop) {
+    flex-basis: calc((100% - 30px * 5) / 6);
+  }
+&:not(:last-child) {
+    @include mq(tablet){ 
+      margin-right: 30px;
+    }
+  }
 }
 
 .clients__link:hover, .clients__link:focus {
@@ -20,32 +53,36 @@
     border-color: $accent-color;
 }
 
-@media screen and (min-width: 480px) {
-    .client__item {
-      width: 210px;
-      height: 92px;
-      &:not(:last-child) {
-        margin-right: 30px;
-      }
-    }
-  }
-  @media screen and (min-width: 768px) {
-    .client__item {
-      width: 226px;
-      height: 92px;
-      &:not(:last-child) {
-        margin-right: 30px;
-      }
-    }
-  }
+
+
+
+// @media screen and (min-width: 480px) {
+//     .client__item {
+//       width: 210px;
+//       height: 92px;
+//       &:not(:last-child) {
+//         margin-right: 30px;
+//       }
+//     }
+//   }
+
+//   @media screen and (min-width: 768px) {
+//     .client__item {
+//       width: 226px;
+//       height: 92px;
+//       &:not(:last-child) {
+//         margin-right: 30px;
+//       }
+//     }
+//   }
   
-  @media screen and (min-width: 1200px) {
-    .client__item {
-      width: 170px;
-      height: 92px;
-      &:not(:last-child) {
-      margin-right: 30px;
-    }
-  }
-}
+//   @media screen and (min-width: 1200px) {
+//     .client__item {
+//       width: 170px;
+//       height: 92px;
+//       &:not(:last-child) {
+//       margin-right: 30px;
+//     }
+//   }
+// }
   
