--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,5 +2,17 @@
 .bottom{
     background-color: $dark-bg-color;
     padding-top: 60px;
+    padding-bottom: 60px;
 }
 
+.footer__contacts {
+  @include mq(mobile-only) {
+    margin-bottom: 60px;
+  }
+
+  text-align: center;
+
+  @include mq(desktop) {
+    text-align: left;
+  }
+}
