--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,28 @@
     border-color:#ECECEC;
 }
 
+.header__container{
+  @include mq(mobile-only) {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 16px;
+    padding-bottom: 16px;
+    z-index: 10;
+
+    background-color: $main-bg-color;
+    border-bottom: 1px solid $borderColor;
+  }
+
+  @include mq(tablet) {
+    display: flex;
+    align-items: center;
+  }
+}
+
+
+
 nav{
     display: flex;
     align-items: center;
