--- a/sass/components/_main-thing.scss
+++ b/sass/components/_main-thing.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 70px;
     text-align: center;
-    padding: 27px 0px;
+    padding: 27px 0px 27px 0px;
     background-color: $bg-modal-color;
     color: $main-bg-color;
     text-transform: uppercase;
