--- a/sass/components/_spacial.scss
+++ b/sass/components/_spacial.scss
@@ -1,15 +1,41 @@
 .spacials{
+     @include mq(desktop) {
     padding-bottom: 0px;
+  }
 }
 
-.spacial:not(:last-child) {
-    margin-right: 30px;
-}
-
-.spacial {
-    width: 270px;
+.spacial{
+    // width: 270px;
     font-size: 14px;
+&:not(:last-child) {
+    @include mq(tablet){
+        display: flex;
+        flex-wrap: wrap;
+    margin-right: 30px;
+    }
+    @include mq(mobile-only) {
+      margin-bottom: 30px;
+    }
+     @include mq(tablet) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @include mq(desktop) {
+    flex-basis: calc((100% - 30px * 3) / 4);
+  }
 }
+}
+
+.thumb {
+     @include flexBox();
+    margin-bottom: 30px;
+    padding: 25px 100px;
+    background-color: $medium-bg-color;
+    border-radius: 4px;
+      height: 120px;
+  max-width: 450px;
+}
+
 
 li > .spacial-heading {
     text-transform: uppercase;
@@ -17,6 +43,10 @@ li > .spacial-heading {
     color: $header-color;
     margin-bottom: 10px;
     letter-spacing: 0.03em;
+
+    @include mq(mobile-only) {
+    text-align: center;
+  }
 }
 
 .spacial-text{
