--- a/sass/components/_thing.scss
+++ b/sass/components/_thing.scss
@@ -15,6 +15,9 @@
     letter-spacing: 0.03em;
     margin-bottom: 50px;
     text-align: center;
+    @include mq(mobile-only) {
+      margin-bottom: 30px;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -27,16 +30,17 @@
 
 .main-team {
     background-color: $medium-bg-color;
+
+    @include mq(tablet) {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
 }
 
 .photo, 
 .photo-team {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
@@ -51,6 +55,11 @@
 .photo-item{
     transition: all 0.3s ease;
     position: relative;
+}
+@media screen and (max-width: 1199.98px) {
+  .main-thing {
+    display: none;
+  }
 }
 
 
