--- a/css/main.css
+++ b/css/main.css
@@ -433,6 +433,18 @@ body {
       align-self: center;
 }
 
+@media screen and (max-width: 767.98px) {
+  .header__icon svg {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .header__phone svg {
+    display: none;
+  }
+}
+
 .header__contacts .header__icon, .spacial__icon, .network__icon {
   margin-right: 10px;
 }
@@ -546,18 +558,30 @@ body {
 
 .header__link-active--marker, .header__link {
   position: relative;
-  padding-bottom: 25px;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+@media screen and (min-width: 768px) {
+  .header__link-active--marker, .header__link {
+    padding-bottom: 25px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .header__link-active--marker, .header__link {
+    font-size: 40px;
+  }
 }
 
 .header__menu a {
   color: #212121;
   text-decoration: none;
-  padding: 32px 0px;
   display: inline-block;
+}
+@media screen and (min-width: 768px) {
+  .header__menu a {
+    padding: 32px 0px;
+  }
 }
 
 li > .header__link-active, .header__link:hover, .header__menu a:focus {
@@ -567,28 +591,6 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
 .header__link-active.header__link-active--marker::after, .header__link:hover::after, .header__link:focus::after {
   -webkit-transform: scale(1);
           transform: scale(1);
-}
-
-.header__link-active::after, .header__link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 4px;
-  bottom: -1px;
-  right: 0;
-  width: 100%;
-  background-color: #2196f3;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  border-radius: 2px;
 }
 
 .header__menu a:hover, .header__link-active {
@@ -671,7 +673,7 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
     padding: 48px 15px 48px 40px;
     width: 100%;
     height: 100vh;
-    background-color: getBgColor("primary");
+    background-color: #fff;
   }
   .mobile-menu.is-open {
     z-index: 1;
@@ -929,25 +931,41 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
 }
 
 nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-bottom: auto;
+}
+@media screen and (min-width: 768px) {
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .header__contacts {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  font-size: 24px;
   font-weight: 500;
-  font-size: 14px;
+  line-height: 1.1666666667;
 }
-
-.header__contacts li {
-  margin-right: 50px;
+@media screen and (max-width: 767.98px) {
+  .header__contacts {
+    margin-bottom: 64px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .header__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 32px;
+  }
 }
 
 .header__email-contact, .header__phone {
@@ -960,43 +978,65 @@ nav {
   color: #2196f3;
 }
 
-.container .header__contacts {
-  margin-left: auto;
-}
-
 .header__email-contact, .header__phone {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 767.98px) {
+  .header__email-contact, .header__phone {
+    color: #2196f3;
+    font-size: 34px;
+    line-height: 1.1764705882;
+    white-space: nowrap;
+  }
+}
+@media screen and (max-width: 767.98px) and (max-width: 350px) {
+  .header__email-contact, .header__phone {
+    font-size: 9vw;
+  }
+}
 
 /*header-menu*/
-.header__menu li {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .header__menu li:last-child {
+    margin-right: 0px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .header__menu li:last-child {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__menu li {
+    margin-right: 50px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .header__menu li {
+    margin-bottom: 32px;
+  }
 }
 
 .header__menu {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 93px;
   font-weight: 500;
   font-size: 14px;
 }
-
-.header__menu li:last-child, .header__contacts li:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 93px;
+  }
 }
 
-.header__menu {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 93px;
-  font-weight: 500;
-  font-size: 14px;
+@media screen and (min-width: 768px) {
+  .header__contacts li:last-child {
+    margin-right: 0px;
+  }
 }
 
 .header__menu a:hover, .header__link-active {
