--- a/sass/base/common/_container.scss
+++ b/sass/base/common/_container.scss
@@ -1,6 +1,6 @@
 
 .container{
-    width: 1200px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -20,3 +20,8 @@
     }
 }
  
+ @media screen and (min-width: 1200px){
+    .container {
+        width: 1200px;
+    }
+}
