--- a/css/main.css
+++ b/css/main.css
@@ -196,21 +196,20 @@ body {
 }
 
 .container {
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
 }
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -218,6 +217,7 @@ body {
     width: 1200px;
   }
 }
+
 /*button-banner*/
 @media screen and (max-width: 767.98px) {
   main {
@@ -438,6 +438,11 @@ body {
       align-self: center;
 }
 
+@media screen and (min-width: 768px) {
+  .header__icon {
+    margin-right: 0px;
+  }
+}
 @media screen and (max-width: 767.98px) {
   .header__icon svg {
     display: none;
@@ -450,7 +455,7 @@ body {
   }
 }
 
-.header__contacts .header__icon, .spacial__icon, .network__icon {
+.spacial__icon, .network__icon {
   margin-right: 10px;
 }
 
@@ -552,13 +557,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  gap: 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-@media screen and (max-width: 767.98px) {
-  .list {
-    gap: 30px;
-  }
 }
 
 .header__link-active--marker, .header__link {
@@ -596,6 +597,30 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
 .header__link-active.header__link-active--marker::after, .header__link:hover::after, .header__link:focus::after {
   -webkit-transform: scale(1);
           transform: scale(1);
+}
+
+@media screen and (min-width: 768px) {
+  .header__link-active::after, .header__link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 4px;
+    bottom: -1px;
+    right: 0;
+    width: 100%;
+    background-color: #2196f3;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 2px;
+  }
 }
 
 .header__menu a:hover, .header__link-active {
@@ -821,11 +846,6 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
         flex-basis: calc((100% - 150px) / 6);
   }
 }
-@media screen and (min-width: 768px) {
-  .clients__item:not(:last-child) {
-    margin-right: 30px;
-  }
-}
 
 .clients__link:hover, .clients__link:focus {
   color: #2196f3;
@@ -935,8 +955,10 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
   }
 }
 
-nav {
-  margin-bottom: auto;
+@media screen and (max-width: 767.98px) {
+  nav {
+    margin-bottom: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   nav {
@@ -951,13 +973,31 @@ nav {
 
 .header__contacts {
   list-style: none;
-  font-size: 24px;
   font-weight: 500;
   line-height: 1.1666666667;
+}
+@media screen and (min-width: 768px) {
+  .header__contacts {
+    font-size: 12px;
+    line-height: 1.1666666667;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    margin-left: auto;
+  }
 }
 @media screen and (max-width: 767.98px) {
   .header__contacts {
     margin-bottom: 64px;
+    font-size: 24px;
   }
 }
 @media screen and (max-width: 767.98px) {
@@ -971,6 +1011,22 @@ nav {
             flex-direction: column-reverse;
     gap: 32px;
   }
+}
+
+.header__contacts li {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.header__contacts li a {
+  margin-right: 10px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .header__contacts li a {
+    margin-right: 0px;
+  }
+}
+.header__contacts li svg {
+  margin-right: 10px;
 }
 
 .header__email-contact, .header__phone {
@@ -1034,6 +1090,11 @@ nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-left: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__menu {
     margin-left: 93px;
   }
 }
@@ -1075,20 +1136,6 @@ nav {
 
 .team-member {
   padding: 30px 32px;
-}
-
-.main-thing {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .main__text-title {
@@ -1140,20 +1187,6 @@ nav {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/mobile-banner@2x.jpg);
   }
 }
-@media screen and (min-width: 1200px) {
-  .banner {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    min-height: 600px;
-    max-width: 1600px;
-  }
-}
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .banner {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/banner@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/banner@2x.jpg);
-  }
-}
 @media screen and (min-width: 768px) {
   .banner {
     padding-bottom: 118px;
@@ -1166,6 +1199,20 @@ nav {
   .banner {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/tablet-banner@2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/tablet-banner@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .banner {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    min-height: 600px;
+    max-width: 1600px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .banner {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/banner@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/banner@2x.jpg);
   }
 }
 
@@ -1438,18 +1485,19 @@ a {
   }
 }
 
-.spacial {
-  font-size: 14px;
-}
 @media screen and (min-width: 768px) {
-  .spacial:not(:last-child) {
+  .spacials__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    gap: 30px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-right: 30px;
   }
+}
+
+.spacial {
+  font-size: 14px;
 }
 @media screen and (max-width: 767.98px) {
   .spacial:not(:last-child) {
@@ -1457,13 +1505,13 @@ a {
   }
 }
 @media screen and (min-width: 768px) {
-  .spacial:not(:last-child) {
+  .spacial {
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
-  .spacial:not(:last-child) {
+  .spacial {
     -ms-flex-preferred-size: calc((100% - 90px) / 4);
         flex-basis: calc((100% - 90px) / 4);
   }
@@ -1480,7 +1528,6 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 30px;
-  padding: 25px 100px;
   background-color: #f5f4fa;
   border-radius: 4px;
   height: 120px;
@@ -1562,11 +1609,12 @@ li > .spacial-heading {
 @media screen and (min-width: 768px) {
   .team {
     display: block;
-    width: 354px;
-    height: 374px;
+    max-width: 100%;
+    height: auto;
   }
 }
 .team-item {
+  max-width: 450px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1584,6 +1632,16 @@ li > .spacial-heading {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   background-color: #fff;
+}
+@media screen and (min-width: 768px) {
+  .team-item {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item {
+    max-width: 270px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1615,11 +1673,6 @@ li > .spacial-heading {
   margin-bottom: 16px;
 }
 
-@media screen and (min-width: 768px) {
-  .team-item:not(:last-child) {
-    margin-right: 30px;
-  }
-}
 @media screen and (max-width: 767.98px) {
   .team-item:not(:last-child) {
     margin-bottom: 30px;
@@ -1675,46 +1728,26 @@ li > .spacial-heading {
     margin-bottom: 30px;
   }
 }
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .main__header {
     font-size: 28px;
     line-height: 1.17;
     margin-bottom: 30px;
   }
 }
+
 .main-team {
   background-color: #f5f4fa;
 }
+
 @media screen and (min-width: 768px) {
-  .main-team {
+  .photo-team {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-.photo,
-.photo-team {
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .photo, .photo-team {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
   }
 }
 .photo-item {
@@ -1728,6 +1761,13 @@ li > .spacial-heading {
     display: none;
   }
 }
+.photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
 /*hiiden-text*/
 .thing-caption {
   position: absolute;
