--- a/sass/base/common/_container.scss
+++ b/sass/base/common/_container.scss
@@ -1,27 +1,19 @@
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
 
-.container{
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
- }
+  @include mq(mobile) {
+    width: 480px;
+  }
 
+  @include mq(tablet) {
+    width: 768px;
+  }
 
- @media screen and (min-width: 768px){
-    .container {
-        width: 768px;
-    }
-}
-
-@media screen and (min-width: 480px) {
-    .container {
-        width: 480px;
-    }
-}
- 
- @media screen and (min-width: 1200px){
-    .container {
-        width: 1200px;
-    }
+  @include mq(desktop) {
+    width: 1200px;
+  }
 }
