--- a/sass/base/common/_icons.scss
+++ b/sass/base/common/_icons.scss
@@ -6,10 +6,15 @@
 }
 
 .header__icon {
+    @include mq(tablet) {
+    margin-right: 0px;
+}
     svg {
 @include mq(mobile-only) {
     display: none;
 }
+
+
 }
 }
 
@@ -20,9 +25,10 @@
 }
 }
 }
-.header__contacts .header__icon, .spacial__icon, .network__icon {
+.spacial__icon, .network__icon {
  margin-right: 10px;
 }
+
 
 
 .form__icon {
