--- a/sass/components/_clients__link.scss
+++ b/sass/components/_clients__link.scss
@@ -41,11 +41,11 @@
   @include mq(desktop) {
     flex-basis: calc((100% - 30px * 5) / 6);
   }
-&:not(:last-child) {
-    @include mq(tablet){ 
-      margin-right: 30px;
-    }
-  }
+// &:not(:last-child) {
+//     @include mq(tablet){ 
+//       margin-right: 30px;
+//     }
+//   }
 }
 
 .clients__link:hover, .clients__link:focus {
