--- a/sass/components/_thing.scss
+++ b/sass/components/_thing.scss
@@ -18,11 +18,8 @@
     @include mq(mobile-only) {
       margin-bottom: 30px;
     }
-}
-
-@media screen and (min-width: 768px) {
-    .main__header {
-        font-size: 28px;
+    @include mq(tablet-only) {
+           font-size: 28px;
         line-height: 1.17;
         margin-bottom: 30px;
     }
@@ -31,23 +28,14 @@
 .main-team {
     background-color: $medium-bg-color;
 
-    @include mq(tablet) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 }
 
-.photo, 
-.photo-team {
-    width: 100%;
-}
 
 @media screen and (min-width: 768px) {
-    .photo, .photo-team {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+.photo-team {
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
     }
 }
 
@@ -61,6 +49,11 @@
     display: none;
   }
 }
+
+.photo { 
+    display: flex;
+gap: 30px;
+    }
 
 
 /*hiiden-text*/
