--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 15px;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
 }
 
 .button-project {
@@ -132,7 +138,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   color: #000;
-  margin-right: 8px;
   padding: 6px 22px;
   cursor: pointer;
   font-family: "Roboto", sans-serif;
@@ -280,6 +285,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 15px;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
 }
 
 .button-project {
@@ -293,7 +304,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   color: #000;
-  margin-right: 8px;
   padding: 6px 22px;
   cursor: pointer;
   font-family: "Roboto", sans-serif;
@@ -1386,16 +1396,21 @@ li > .header__link-active, .header__link:hover, .header__menu a:focus {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  gap: 30px;
 }
 
-.portfolio-team:not(:nth-child(3n)) {
-  margin-right: 30px;
+.portfolio-team {
+  max-width: 450px;
 }
-
-.portfolio-team:not(:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .portfolio-team {
+    max-width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-team {
+    max-width: calc((100% - 60px) / 3);
+  }
 }
 
 .project-info {
