--- a/sass/base/common/_buttons.scss
+++ b/sass/base/common/_buttons.scss
@@ -62,6 +62,9 @@ display: -webkit-inline-box;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
+   flex-wrap: wrap;
+row-gap: 15px;
+column-gap: 8px;
 }
 
 
@@ -79,7 +82,6 @@ line-height: 1.63;
 font-weight: 500;
 font-size: 16px;
 color: #000;
-margin-right: 8px;
 padding: 6px 22px;
 cursor: pointer;
 font-family: $main-font-family;
