--- a/sass/components/_portfolio-photo.scss
+++ b/sass/components/_portfolio-photo.scss
@@ -5,16 +5,35 @@
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    gap: 30px;
 }
  
-.portfolio-team:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
+// .portfolio-team:not(:nth-child(3n)) {
+//     margin-right: 30px;
+//     @include mq(not-desktop){
+//         margin-bottom: 30px;
+// }
+// }
 
-.portfolio-team:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-}
+
+
+.portfolio-team {
+
+  max-width: 450px;
+
+  @include mq(tablet) {
+    max-width: calc((100% - $primaryGap) / 2);
+  }
+
+  @include mq(desktop) {
+    max-width: calc((100% - $primaryGap * 2) / 3);
+  }
+
+  }
+
+// .portfolio-team:not(:nth-last-child(-n + 3)) {
+//     margin-bottom: 30px;
+// }
 
 .project-info {
     border-left: 1px solid #ECECEC;
